--- a/allocator/static/assets/css/style.css
+++ b/allocator/static/assets/css/style.css
@@ -59,6 +59,17 @@
     font-family: "Nunito", sans-serif;
     margin-top: 3px;
   }
+  @media (max-width: 450px) {
+    .header .logo span {
+      font-size: 20px;
+      font-weight: 700;
+      letter-spacing: 1px;
+      color: #012970;
+      font-family: "Nunito", sans-serif;
+      margin-top: 3px;
+    }
+  
+  }
   
   /*--------------------------------------------------------------
   # Navigation Menu
